--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="title">
         <div class="container-fluid">
             <!-- Nav Bar -->
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-custom">
                 <a class="navbar-brand" href="index.html"><img src="images/icon.jpg" alt="app-icon" style="border-radius: 100%;"> Direct Message Sender</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
