--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <!-- Nav Bar -->
             <nav class="navbar navbar-expand-lg navbar-custom">
                 <a class="navbar-brand" href="index.html"><img src="images/icon.jpg" alt="app-icon" style="border-radius: 100%;"> Direct Message Sender</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" style="color: black;" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars fa-2x"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="color: black;">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#whatsapp">Whatsapp</a>
